<resources>
    <string name="app_name">PadelLog</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Configurações</string>
    <string name="action_delete">Excluir</string>
    <string name="action_save">Salvar</string>
    <string name="action_edit">Editar</string>
    <string name="action_filter">Filtrar</string>
    <string name="title_activity_login">PadelLog</string>
    <string name="title_activity_sign_up">Cadastro</string>
    <string name="prompt_name">Nome</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_new_password">Nova senha</string>
    <string name="action_sign_in">Entrar com e-mail</string>
    <string name="action_link">Link convencional login</string>
    <string name="action_unlink">Unlink convencional login</string>
    <string name="action_sign_in_facebook">Entrar com Facebook</string>
    <string name="action_link_facebook">Link Facebook login</string>
    <string name="action_unlink_facebook">Unlink Facebook login</string>
    <string name="action_sign_in_google">Entrar com Google</string>
    <string name="action_link_google">Link Google login</string>
    <string name="action_unlink_google">Unlink Google login</string>
    <string name="action_sign_up">Cadastrar</string>
    <string name="action_sign_up_call">Cadastrar</string>
    <string name="action_reset_call">Recuperar acesso</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Cadastro</string>
    <string name="error_invalid_email">Esse endereço de e-mail é inválido.</string>
    <string name="error_invalid_password">Senha muito curta</string>
    <string name="error_incorrect_password">A senha é incorreta</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="update_profile">Atualizar profile</string>
    <string name="reset">Recuperar acesso</string>
    <string name="update_login">Atualizar login</string>
    <string name="reset_bt_label">Iniciar recuperação acesso</string>
    <string name="update_password">Atualizar senha</string>
    <string name="link_accounts">Link contas</string>
    <string name="remove_user">Remover conta</string>
    <string name="logout">Logout</string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="title_activity_update_login">UpdateLoginActivity</string>
    <string name="title_activity_update_password">UpdatePasswordActivity</string>
    <string name="title_activity_link_accounts">Link contas</string>
    <string name="title_activity_remove_user">RemoveUserActivity</string>
    <string name="title_activity_notification">Notifications Firebase</string>
    <string name="password_info">Para prosseguir com a atualização informe abaixo sua senha.</string>
    <string name="edt_initial_date">Início</string>
    <string name="edt_final_date">Fim</string>
    <string name="facebook_app_id">1748665178734590</string>
    <string name="my_google_app_id">AIzaSyB9Khl6hPjAQ_BOpLTk7cZ1v1l1fq18Jfc</string>
    <string name="chk_unique_token">Unique token id</string>
    <string name="link_privacy">file:///android_asset/politicaprivacidade.html</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_policy">Política de privacidade</string>
    <string name="nav_championships">Campeonatos</string>
    <string name="nav_my_championships">Meus campeonatos</string>
    <string name="nav_academies">Academias</string>
    <string name="nav_players">Jogadores</string>
    <string name="nav_statistics">Estatísticas</string>
    <string name="nav_show">Mostrar</string>
    <string name="nav_per_result">Por resultados</string>
    <string name="nav_per_partner">Por parceiro</string>
    <string name="nav_ranking">Ranking</string>
    <string name="nav_awards">Conquistas</string>
    <string name="title_activity_championship_list">Meus campeonatos</string>
    <string name="title_activity_add_championship">Campeonato</string>
    <string name="edt_championship_name">Nome</string>
    <string name="edt_partner_name">Parceiro</string>
    <string name="edt_category">Categoria</string>
    <string name="edt_academy_phone">Telefone</string>
    <string name="edt_academy_email">E-mail</string>
    <string name="edt_match_round">Fase</string>
    <string name="edt_match_opponent_drive">Adversário direita</string>
    <string name="edt_match_opponent_backdrive">Adversário esquerda</string>
    <string name="menu_save">Salvar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="championship_info">
        Campeonato disputado em %1$s, de %2$s até %3$s. %4$s e %5$s
        obtiveram o seguinte resultado na %6$s: %7$s.</string>
    <string name="photo_processing">Processando</string>
    <string name="photo_complete" formatted="false">completo.</string>
    <string name="login_activity_or">ou</string>
    <string name="title_activity_add_match">Jogo</string>
    <string name="str_you">você</string>
    <string name="spinner_round">Fase</string>
    <string name="round_draw">Chave</string>
    <string name="round_64">64 avos de final</string>
    <string name="round_32">32 avos de final</string>
    <string name="round_16">16 avos de final</string>
    <string name="round_8">Oitavas de final</string>
    <string name="round_4">Quartas de final</string>
    <string name="round_semi">Semifinal</string>
    <string name="round_final">Final</string>
    <string name="result_name_vice">Vice-campeões</string>
    <string name="result_name_champion">Campeões</string>
    <string name="result_name_none">Sem jogos</string>
    <string name="spinner_category">Categoria</string>
    <string name="category_pro">Primeira/Profissional</string>
    <string name="category_2nd">Segunda</string>
    <string name="category_3th">Terceira</string>
    <string name="category_4th">Quarta</string>
    <string name="category_5th">Quinta</string>
    <string name="category_6th">Sexta</string>
    <string name="category_7th">Sétima</string>
    <string name="category_open">Open</string>
    <string name="category_3035a">+30/+35 A</string>
    <string name="category_3035b">+30/+35 B</string>
    <string name="category_3035c">+30/+35 C</string>
    <string name="category_4045a">+40/+45 A</string>
    <string name="category_4045b">+40/+45 B</string>
    <string name="category_4045c">+40/+45 C</string>
    <string name="category_5055a">+50/+55 A</string>
    <string name="category_5055b">+50/+55 B</string>
    <string name="category_5055c">+50/+55 C</string>
    <string name="category_mixedA">Mista A</string>
    <string name="category_mixedB">Mista B</string>
    <string name="category_mixedC">Mista C</string>
    <string name="category_mixedD">Mista D</string>
    <string name="category_sub20">Sub 20</string>
    <string name="category_sub18">Sub 18</string>
    <string name="category_sub16">Sub 16</string>
    <string name="category_sub14">Sub 14</string>
    <string name="category_sub12">Sub 12</string>
    <string name="category_other">Outra</string>
    <string name="msg_chart_no_data">Sem dados para exibir.</string>
    <string name="msg_error_img_file">"Não foi possível criar a imagem."</string>
    <string name="title_activity_maps">Map</string>
    <string name="msg_action_deleted">Excluído</string>
    <string name="msg_account_created">Conta criada com sucesso!</string>
    <string name="msg_field_required">Campo obrigatório!</string>
    <string name="login_invalid">E-mail inválido!</string>
    <string name="login_pass_size_invalid">Senha deve ter entre 6 e 15 caracteres!</string>
    <string name="login_display_name_size_invalid">Nome deve ter entre 6 e 15 caracteres!</string>
    <string name="msg_not_done_yet">Não implementado.</string>
    <string name="msg_alert_permission">Para utilizar o PadelLog, você precisa aceitar as permissões.</string>
    <string name="msg_alert_OK">OK</string>
    <string name="msg_alert_no_internet">Sem internet</string>
    <string name="msg_verify_no_internet">Verifique sua conexão de internet.</string>
    <string name="msg_no_internet">Sem internet.</string>
    <string name="msg_championship_saved">Campeonato salvo.</string>
    <string name="msg_championship_converted">Foto convertida.</string>
    <string name="msg_match_saved">Partida salva.</string>
    <string name="msg_profile_updated">Perfil atualizado.</string>
    <string name="msg_profile_cant_be_public">Perfil público deve ter uma foto e um local.</string>
    <string name="msg_academy_saved">Academia salva.</string>
    <string name="msg_academy_saved_temp">Academia enviada para análise e quando for aprovada estará disponível para uso.</string>
    <string name="msg_academy_need_photo">Adicione uma foto.</string>
    <string name="msg_photo_erros">Falha ao capturar imagem.</string>
    <string name="msg_saving">Salvando...</string>
    <string name="msg_converting">Convertendo foto...</string>
    <string name="msg_update_place">Atualizando local...</string>
    <string name="msg_update_count">Contando jogos...</string>
    <string name="msg_loading">Carregando...</string>
    <string name="title_activity_chart">Resultados</string>
    <string name="title_activity_edit_profile">Perfil</string>
    <string name="lbl_edt_place">Local</string>
    <string name="lbl_see_championships">%1$s campeonato(s)</string>
    <string name="lbl_switch_public_profile">Perfil público</string>
    <string name="lbl_switch_verified">Verificado</string>
    <string name="img_camera">Câmera</string>
    <string name="img_gallery">Galeria</string>
    <string name="img_delete">Remover</string>
    <string name="title_dlg_confirm_delete">Confirmação de exclusão</string>
    <string name="msg_match_delete">O jogo será excluído.</string>
    <string name="msg_academy_delete">A academia será excluída.</string>
    <string name="msg_championship_delete">O campeonato será excluído.</string>
    <string name="btn_delete">Excluir</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="tab_info">Informações</string>
    <string name="tab_matches">Jogos</string>
    <string name="msg_google_login_error">Google login falhou, tente novamente</string>
    <string name="msg_login_error">Login falhou</string>
    <string name="msg_player_without_chapionships">Jogador sem campeonatos</string>
    <string name="msg_player_must_be_public">Seu perfil precisa ser público</string>
    <string name="lbl_make_public">Tornar público</string>
    <string name="title_dlg_warning">Aviso</string>
    <string name="msg_profile_incomplete">Seu perfil ainda não está completo.</string>
    <string name="btn_complete">Completar</string>
    <string name="btn_later">Mais tarde</string>
    <string name="title_activity_academy_list">AcademyListActivity</string>
    <string name="control_key">FYNaXQMkPSPo17AELcgncX5Y5Ei2</string>
    <string name="title_activity_add_academy">Academia</string>
    <string name="title_dlg_select_place">Selecionar</string>
    <string name="title_activity_ranking">Ranking</string>
    <string name="subtitle_ranking_all">Todos campeonatos</string>
    <string name="subtitle_ranking_firstplace">Campeões</string>
    <string name="subtitle_ranking_secondplace">Vice-campeões</string>
    <string name="subtitle_ranking_victory">Nº de vitórias</string>
    <string name="subtitle_ranking_percent">% de vitórias</string>
    <string name="title_activity_achievments">AchievmentsActivity</string>
    <string name="str_achievement_its_just_the_beginning">É só o começo</string>
    <string name="str_achievement_its_just_the_beginning_info">10 campeonatos registrados</string>
</resources>