<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/group0">

        <item
            android:id="@+id/nav_my_championships"
            android:icon="@drawable/ic_menu_trophy_outline"
            android:title="@string/nav_my_championships" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item android:title="@string/nav_show">
            <menu>
                <item
                    android:id="@+id/nav_show_championships"
                    android:icon="@drawable/ic_menu_trophy"
                    android:title="@string/nav_championships" />
                <item
                    android:id="@+id/nav_show_players"
                    android:icon="@drawable/ic_players"
                    android:title="@string/nav_players" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group2">
        <item android:title="@string/nav_statistics">
            <menu>
                <item
                    android:id="@+id/nav_per_year"
                    android:icon="@drawable/ic_ranking"
                    android:title="@string/nav_per_result" />
                <item
                    android:id="@+id/nav_per_partner"
                    android:icon="@drawable/ic_menu_partner"
                    android:visible="false"
                    android:title="@string/nav_per_partner" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group3">
        <item
            android:id="@+id/nav_policy"
            android:icon="@drawable/ic_lock_black_24dp"
            android:title="@string/nav_policy" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/nav_logout" />
    </group>

</menu>
