<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.renatonunes.padellog.AddChampionshipActivity"
    tools:showIn="@layout/activity_add_championship"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_add_championship_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_championship_name"
            android:imeOptions="actionUnspecified"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_add_partner_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_partner_name"
            android:imeOptions="actionUnspecified"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_add_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_category"
            android:imeOptions="actionUnspecified"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_add_initial_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edt_initial_date"
                android:focusable="false"
                android:imeOptions="actionUnspecified"
                android:inputType="date"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_add_final_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/edt_final_date"
                android:imeOptions="actionUnspecified"
                android:inputType="date"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/edt_add_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Local"
        android:focusable="false"
        android:imeOptions="actionUnspecified"
        android:inputType="date"
        android:maxLines="1"
        android:singleLine="true" />

    <FrameLayout
        android:layout_height="200dp"
        android:layout_width="match_parent">

        <ImageView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/thumbnail_preview"
            android:background="@drawable/no_photo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:padding="16dp">

            <Button
                android:layout_weight="0.2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnTakePhoto"
                android:onClick="TakePhoto"
                android:background="@drawable/ic_camera"/>
            <Button
                android:layout_weight="0.6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnTakePhoto3"
                android:onClick="TakePhoto"
                android:visibility="invisible"
                android:background="@drawable/ic_camera"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                android:id="@+id/btnPickPhoto"
                android:onClick="PickPhoto"
                android:background="@drawable/ic_folder_image"/>

        </LinearLayout>
    </FrameLayout>
</LinearLayout>
