<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.renatonunes.padellog.ChartActivity"
    tools:showIn="@layout/activity_chart">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/layout_search"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:background="@color/colorPrimary"
            android:paddingTop="8dp"
            android:layout_width="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

                <android.support.design.widget.TextInputLayout
                    android:theme="@style/EditTextHint"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_chart_initial_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edt_initial_date"
                        android:focusable="false"
                        android:imeOptions="actionUnspecified"
                        android:inputType="date"
                        android:maxLines="1"
                        android:textColor="@color/cardview_light_background"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:theme="@style/EditTextHint"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_chart_final_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/edt_final_date"
                        android:imeOptions="actionUnspecified"
                        android:inputType="date"
                        android:maxLines="1"
                        android:textColor="@color/cardview_light_background"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

        </LinearLayout>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.85"
            android:contentDescription="@string/menu_save" />

    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_chart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_chart_arc"
        app:layout_anchor="@+id/layout_search"
        app:layout_anchorGravity="right|bottom|end"/>
</android.support.design.widget.CoordinatorLayout>
